tests/ui/associated-inherent-types/issue-109768.stderr
error[E0601]: `main` function not found in crate `issue_109768`
  --> $DIR/issue-109768.rs:12:2
   |
LL | }
   |  ^ consider adding a `main` function to `$DIR/issue-109768.rs`

error[E0107]: missing generics for struct `Local`
  --> $DIR/issue-109768.rs:7:9
   |
LL | impl<T> Local {
   |         ^^^^^ expected 2 generic arguments
   |
note: struct defined here, with 2 generic parameters: `T`, `U`
  --> $DIR/issue-109768.rs:5:8
   |
LL | struct Local<T, U>(T, U);
   |        ^^^^^ -  -
help: add missing generic arguments
   |
LL | impl<T> Local<T, U> {
   |              ++++++

error[E0658]: inherent associated types are unstable
  --> $DIR/issue-109768.rs:8:5
   |
LL |     type AssocType3 = T;
   |     ^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #8995 <https://github.com/rust-lang/rust/issues/8995> for more information
   = help: add `#![feature(inherent_associated_types)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0061]: this struct takes 1 argument but 0 arguments were supplied
  --> $DIR/issue-109768.rs:10:56
   |
LL |     const WRAPPED_ASSOC_3: Wrapper<Self::AssocType3> = Wrapper();
   |                                                        ^^^^^^^-- argument #1 is missing
   |
note: tuple struct defined here
  --> $DIR/issue-109768.rs:3:8
   |
LL | struct Wrapper<T>(T);
   |        ^^^^^^^
help: provide the argument
   |
LL |     const WRAPPED_ASSOC_3: Wrapper<Self::AssocType3> = Wrapper(/* value */);
   |                                                                +++++++++++

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0061, E0107, E0601, E0658.
For more information about an error, try `rustc --explain E0061`.
